--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>BlogVerse - Explore Diverse Topics</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
 <body>
+
   <header>
     <h1>📝 BlogVerse</h1>
     <nav>
@@ -14,7 +23,9 @@
     </nav>
   </header>
 
-  <main id="blog-container"></main>
+  <main id="blog-container">
+    <!-- Blog posts will be rendered here dynamically -->
+  </main>
 
   <div id="postModal" class="modal hidden">
     <div class="modal-content">
@@ -38,3 +49,4 @@
 
   <script src="script.js"></script>
 </body>
+</html>
