--- a/index.html
+++ b/index.html
@@ -28,6 +28,30 @@
       <button id="newPostBtn">➕ New Post</button>
       <div id="filters">
         <button class="filter-btn" data-category="all">All</button>
+        <button class="filter-btn" data-category="morning-routines">Morning Routines</button>
+        <button class="filter-btn" data-category="productivity">Productivity Hacks</button>
+        <button class="filter-btn" data-category="procrastination">Procrastination Tips</button>
+        <button class="filter-btn" data-category="mindset">Positive Mindset</button>
+        <button class="filter-btn" data-category="goals">Goal Setting</button>
+        <button class="filter-btn" data-category="meal-prep">Meal Prep</button>
+        <button class="filter-btn" data-category="fasting">Intermittent Fasting</button>
+        <button class="filter-btn" data-category="workouts">Home Workouts</button>
+        <button class="filter-btn" data-category="sleep">Sleep Better</button>
+        <button class="filter-btn" data-category="stress">Stress Relief</button>
+        <button class="filter-btn" data-category="budgeting">Budgeting</button>
+        <button class="filter-btn" data-category="side-hustles">Side Hustles</button>
+        <button class="filter-btn" data-category="investing">Investing Basics</button>
+        <button class="filter-btn" data-category="grocery">Grocery Savings</button>
+        <button class="filter-btn" data-category="debt">Debt Freedom</button>
+        <button class="filter-btn" data-category="productivity-apps">Productivity Apps</button>
+        <button class="filter-btn" data-category="privacy">Online Privacy</button>
+        <button class="filter-btn" data-category="ai">AI Tools</button>
+        <button class="filter-btn" data-category="smart-homes">Smart Homes</button>
+        <button class="filter-btn" data-category="coding">Coding Basics</button>
+        <button class="filter-btn" data-category="travel">Budget Travel</button>
+        <button class="filter-btn" data-category="packing">Packing Tips</button>
+        <button class="filter-btn" data-category="solo-travel">Solo Travel</button>
+        <button class="filter-btn" data-category="minimalism">Minimalism</button>
         <button class="filter-btn" data-category="tech">Tech</button>
         <button class="filter-btn" data-category="travel">Travel</button>
         <button class="filter-btn" data-category="food">Food</button>
