--- a/index.html
+++ b/index.html
@@ -85,5 +85,13 @@
   </footer>
 
   <script src="./script.js"></script>
+  <div id="readPostModal" class="modal hidden">
+  <div class="modal-content">
+    <h2 id="readPostTitle"></h2>
+    <p id="readPostCategory"></p>
+    <p id="readPostContent"></p>
+    <button id="closeReadModal">Close</button>
+  </div>
+</div>
 </body>
 </html>
